[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/StoreUI.gd" type="Script" id=1]
[ext_resource path="res://objects/ui/SceneSwitcher.gd" type="Script" id=2]
[ext_resource path="res://theme/mechjam.tres" type="Theme" id=3]
[ext_resource path="res://theme/mechjam_smol.tres" type="Theme" id=4]
[ext_resource path="res://assets/audio/songs/Atmosphere_-_Droid_Factory.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/effects/click.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/fbx/player.fbx" type="PackedScene" id=7]

[sub_resource type="Environment" id=1]

[sub_resource type="BoxShape" id=2]

[node name="Spatial" type="Spatial"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="WorldEnvironment"]
transform = Transform( 0.346651, 0.639398, 0.686296, -0.169178, -0.677045, 0.716232, 0.922611, -0.364389, -0.126527, 10, 10, 0 )
light_bake_mode = 2

[node name="Player" type="KinematicBody" parent="WorldEnvironment"]

[node name="CollisionShape" type="CollisionShape" parent="WorldEnvironment/Player"]
transform = Transform( 0.4, 0, 0, 0, 0.5, 0, 0, 0, 0.4, 0, 0.5, 0 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="WorldEnvironment/Player"]

[node name="player" type="Spatial" parent="WorldEnvironment/Player" instance=ExtResource( 7 )]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )

[node name="StoreUI" type="Node" parent="."]
script = ExtResource( 1 )

[node name="StoreMarginContainer" type="VBoxContainer" parent="StoreUI"]
margin_left = 424.0
margin_right = 1024.0
margin_bottom = 512.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="StoreUI"]
stream = ExtResource( 5 )
autoplay = true

[node name="Click" type="AudioStreamPlayer" parent="StoreUI"]
stream = ExtResource( 6 )

[node name="ArmorButton" type="Button" parent="StoreUI"]
margin_left = 128.0
margin_top = 192.0
margin_right = 232.0
margin_bottom = 232.0
theme = ExtResource( 3 )
text = "Armor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponButton" type="Button" parent="StoreUI"]
margin_left = 16.0
margin_top = 192.0
margin_right = 120.0
margin_bottom = 232.0
theme = ExtResource( 3 )
text = "Weapon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon2Button" type="Button" parent="StoreUI"]
margin_left = 240.0
margin_top = 192.0
margin_right = 344.0
margin_bottom = 232.0
theme = ExtResource( 3 )
text = "Weapon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CockpitButton" type="Button" parent="StoreUI"]
margin_left = 128.0
margin_top = 144.0
margin_right = 232.0
margin_bottom = 184.0
theme = ExtResource( 3 )
text = "Cockpit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LegsButton" type="Button" parent="StoreUI"]
margin_left = 128.0
margin_top = 240.0
margin_right = 232.0
margin_bottom = 280.0
theme = ExtResource( 3 )
text = "Legs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FightButton" type="Button" parent="StoreUI"]
margin_left = 904.0
margin_top = 528.0
margin_right = 1000.0
margin_bottom = 576.0
theme = ExtResource( 3 )
text = "Fight!"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
target_scene = "res://scenes/Battlefield/Battlefield.tscn"

[node name="Money" type="Label" parent="StoreUI"]
margin_left = 24.0
margin_top = 568.0
margin_right = 176.0
margin_bottom = 582.0
text = "Money: "
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StoreUI/ArmorButton" to="StoreUI" method="_on_ArmorButton_pressed"]
[connection signal="pressed" from="StoreUI/WeaponButton" to="StoreUI" method="_on_WeaponButton_pressed"]
[connection signal="pressed" from="StoreUI/Weapon2Button" to="StoreUI" method="_on_WeaponButton_pressed"]
[connection signal="pressed" from="StoreUI/CockpitButton" to="StoreUI" method="_on_CockpitButton_pressed"]
[connection signal="pressed" from="StoreUI/LegsButton" to="StoreUI" method="_on_LegsButton_pressed"]
